<resources>
    <string name="app_name">Clima Tungurahua</string>
    <string name="informacion_hidrometeorologica">Información Hidrometeorológica</string>
    <string name="tungurahua">Tungurahua</string>
    <string name="estaciones_tiempo_real">Estaciones en tiempo real</string>
    <string name="historia_datos_hidrometeo">Historico de datos hidrometeorológicos</string>
    <string name="embalses">Embalses</string>
    <string name="cero">0</string>
    <!--Opciones menu-->

    <string name="refresh">Recargar</string>
    <string name="map">Mapa</string>
    <string name="settings">Configuraciones</string>
    <string name="daily">diaria</string>
    <string name="maxima">Máxima</string>
    <string name="minima">Mínima</string>

    <!--List stations-->
    <string name="station_name">Nombre estacion</string>
    <string name="station_canton">Canton</string>
    <string name="msnm">MSNM</string>
    <string name="station_altura">Altura</string>
    <!--List embalses-->
    <string name="embalse_name">Nombre embalse</string>
    <!--View station-->
    <string name="param_name">Nombre parametro</string>
    <string name="no_data_available">Sin datos disponibles</string>
    <string name="data_available">Datos disponibles</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="altitude">Altitud</string>
    <string name="address">Dirección</string>
    <string name="description">Descripción</string>
    <string name="parroquia">Parróquia</string>
    <string name="canton">Cantón</string>

    <!--View datos-->
    <string name="tomorrow">Mañana</string>
    <string name="today">Hoy</string>
    <string name="yesterday">Ayer</string>

    <!--Configuraciones-->
    <string name="pref_location_default">Ambato, Ecuador</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Ubicación</string>

    <string name="pref_frecuencia_default">1</string>
    <string name="pref_frecuencia_key" translatable="false">frecuencia</string>
    <string name="pref_frecuencia_label">Frecuencia de sincronización</string>

    <string name="pref_num_days_default">14</string>
    <string name="pref_num_days_key" translatable="false">num_days</string>
    <string name="pref_num_days_label" >Número de días atras para consulta</string>

    <string name="pref_num_hours_default">24</string>
    <string name="pref_num_hours_key">num_hours</string>
    <string name="pref_num_hours_label">Número de horas atras para consulta</string>

    <string name="pref_notifications_key" translatable="false">notifications</string>
    <string name="pref_notifications_label">Habilitar notificaciones</string>
    <string name="pref_notifications_on">Habilitadas</string>
    <string name="pref_notifications_off">Deshabilitadas</string>

    <string name="pref_decimales_default">2</string>
    <string name="pref_decimales_key" translatable="false">decimales</string>
    <string name="pref_decimales_label">Número de decimales</string>

    <string name="pref_url_rest_default">http://rrnn.tungurahua.gob.ec/services/Ws_red</string>
    <string name="pref_url_rest_key" translatable="false">url_rest</string>
    <string name="pref_url_rest_label">URL servicio REST</string>


    <string name="station_detail">Detalles estación</string>
    <string name="loading_from_rrnn">Descargando información desde </string>
    <string name="error_load_list_stations">Error al cargar estaciones</string>
    <string name="error_load_list_params_station">La estación no esta transmitiendo datos por el momento</string>
    <string name="error_load_list_param">Error al leer datos desde servidor</string>

</resources>
