<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_embalse_canton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/canton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_embalse_name" />

    <TextView
        android:id="@+id/tv_embalse_parroquia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/parroquia"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_embalse_canton"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toRightOf="@+id/tv_embalse_canton"
        app:layout_constraintRight_toLeftOf="@+id/tv_embalse_altitud" />

    <TextView
        android:id="@+id/tv_embalse_altitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/altitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_embalse_parroquia"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_embalse_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/embalse_name" />
</android.support.constraint.ConstraintLayout>